# Directional

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  directional_build_backend.py  pyproject.toml  setup.py  vcpkg.json
cmake/: DirectionalDependencies.cmake  DirectionalDependenciesGMP.cmake  DirectionalDependenciesSuiteSparse.cmake  DirectionalDependencyConfig.cmake  DirectionalRuntime.cmake  DirectionalVcpkg.cmake
include/directional/: BigInteger.h  ENumber_GMP.h  ENumber_internal.h  NFunctionMesher.h  cuda_solver.h  dcel.h  exact_geometric_definitions.h  generate_mesh.h  integrate.h  mesher.h  pipeline.h  polyvector_field.h  polyvector_to_raw.h  setup_integration.h
include/directional/Deprecated/: circumcircle.h  harmonic_basis.h  iterative_rounding.h  subdivide_field.h
include/directional/Deprecated/SubdivisionInternal/: is_edgedata_consistent.h
python/directional/: __init__.py
python/src/: bindings.cpp
src/: directional_core.cpp
tutorial/: CMakeLists.txt
tutorial/101_GlyphRendering/: CMakeLists.txt
tutorial/102_DiscreteTangentBundles/: CMakeLists.txt
tutorial/103_StreamlineTracing/: CMakeLists.txt
tutorial/104_FaceVertexEdgeData/: CMakeLists.txt
tutorial/105_Sparsity/: CMakeLists.txt
tutorial/106_PrincipalDirections/: CMakeLists.txt
tutorial/201_PrincipalMatching/: CMakeLists.txt
tutorial/202_Sampling/: CMakeLists.txt
tutorial/203_Combing/: CMakeLists.txt
tutorial/301_PowerFields/: CMakeLists.txt
tutorial/302_PolyVectors/: CMakeLists.txt
tutorial/303_GinzburgLandau/: CMakeLists.txt
tutorial/304_IntegrableFields/: CMakeLists.txt
tutorial/401_IndexPrescription/: CMakeLists.txt
tutorial/501_SeamlessIntegration/: CMakeLists.txt
tutorial/502_DifferentOrders/: CMakeLists.txt
tutorial/503_SeamsSingsRounding/: CMakeLists.txt
tutorial/504_LinearReductions/: CMakeLists.txt
tutorial/505_Meshing/: CMakeLists.txt
tutorial/601_FaceBasedFEM/: CMakeLists.txt
tutorial/602_DiscreteExteriorCalculus/: CMakeLists.txt
tutorial/603_HodgeDecomposition/: CMakeLists.txt
tutorial/604_HodgeBoundary/: CMakeLists.txt
tutorial/605_HarmonicFields/: CMakeLists.txt
tutorial/701_SubdivisionFields/: CMakeLists.txt
tutorial/unsupported/: CMakeLists.txt
